# mnda-automation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml  run.py
mnda_automation/: __init__.py  config.py  drive.py  parser.py  review.py
playbook/: CLAUDE.md  legal_playbook.md  playbook.json
plugin/: CONNECTORS.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: mnda-review.md
plugin/skills/mnda-review/: SKILL.md
plugin/skills/mnda-review/references/: playbook.md  standard-mnda-template.md
plugin/skills/mnda-triage/: SKILL.md
scripts/: review_mnda.py
tests/: test_review.py
